--- a/Capítulos/capitulos.html
+++ b/Capítulos/capitulos.html
@@ -13,8 +13,8 @@
         <h1>=== <strong>恋</strong>と悲劇 ===</h1>
         <p><strong>Site Oficial</strong></p>
         <nav>
-            <a href="../index.html" target="_blank">Início</a>
-            <a href="../personagens/pagina2.html" target="_blank">Personagens</a>
+            <a href="../index.html" >Início</a>
+            <a href="../personagens/pagina2.html" >Personagens</a>
             <a href="#">Capítulos</a>
         </nav>
     </header>
