--- a/Volume 1/prologo.html
+++ b/Volume 1/prologo.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="prologo.css">
     <title>Vol 1: Prólogo</title>
+    <link rel="shortcut icon" href="../imagens/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -12,9 +13,9 @@
         <h1> === <strong>恋</strong>と悲劇 ===</h1>
         <p><strong>Site Oficial</strong></p>
         <nav>
-            <a href="../index.html" target="_blank">Início</a>
-            <a href="personagens/pagina2.html" target="_blank">Personagens</a>
-            <a href="../Capítulos/capitulos.html" target="_blank">Capítulos</a>
+            <a href="../index.html" >Início</a>
+            <a href="../personagens/pagina2.html" >Personagens</a>
+            <a href="../Capítulos/capitulos.html" >Capítulos</a>
         </nav>
     </header>
     <main>
