--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         
         <nav>
             <a href="#">Início</a>
-            <a href="personagens/pagina2.html" target="_blank">Personagens</a>
-            <a href="Capítulos/capitulos.html" target="_blank">Capítulos</a>
+            <a href="personagens/pagina2.html" >Personagens</a>
+            <a href="Capítulos/capitulos.html" >Capítulos</a>
         </nav>
     </header>
     <main>
@@ -30,7 +30,7 @@
         <p class="divisao">O mundo de Nahtian é extremamento vasto. Tão vasto que os habitantes do continente Nobre nunca conheceram nada além dos seus limites. O continente Nobre é um dos continentes principais durante a história do RPG. Este continente possui 5 grandes reinos, cada um com sua próprias peculiaridades. Esses reinos são: Fittoa, Zatto, Flora, Kinshasa e Yonaguni.</p>
         <p class="divisao">O nome "Nahtian" teve origem a partir de um Shipp/junção de dois nomes que você provavelmente já leu neste site. A junção foi feita entre os nomes Hannah e Cristian, ambos criadores do RPG 恋と悲劇 (koi to higeki). HanNah/CrisTian.</p>
         
-        <h2>Reinos de Nahtian</h2>
+        <h2>- Reinos de Nahtian</h2>
         <picture>
         <source media="(max-width: 700px )" srcset="imagens\mapa-mundi-pequeno-ori.jpg" type="image/jpg">
         <img src="imagens/mapa-mundi.jpg" alt="original">
