--- a/personagens/pagina2.html
+++ b/personagens/pagina2.html
@@ -13,9 +13,9 @@
             <h1> === <strong>恋</strong>と悲劇 ===</h1>
             <p><strong>Site Oficial</strong></p>
             <nav>
-                <a href="../index.html" target="_blank">Início</a>
-                <a href="personagens/pagina2.html" target="_blank">Personagens</a>
-                <a href="../Capítulos/capitulos.html" target="_blank">Capítulos</a>
+                <a href="../index.html" >Início</a>
+                <a href="personagens/pagina2.html" >Personagens</a>
+                <a href="../Capítulos/capitulos.html" >Capítulos</a>
             </nav>
         </header>
         <main>
@@ -37,6 +37,10 @@
             <h2>Daniela</h2>
             <img class="personagens" src="../imagens/daniela.png" alt="daniela">
             <p class="divisão">Empregada e cuidadora de Yuki, Daniela é a pessoa que carrega a maior responsabilidade entre todos os empregados do castelo de Fittoa.</p>
+
+            <h2>Philips Leonard</h2>
+            <img class="personagens" src="../imagens/PhilipsLeonard.png" alt="Philips">
+            <p class="divisão">Pai de Yuki e rei de Fittoa, Philips Leonard carrega consigo a responsabilidade e a honra de governar o reino de Fittoa e cuidar de seus habitantes.</p>
 
 
         </main>
